--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-debug": "vite build --debug",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -14,7 +15,8 @@
     "globule": "^1.3.4",
     "sass": "^1.85.1",
     "vite": "^5.0.0",
-    "vite-plugin-imagemin": "^0.6.1"
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-sass-glob-import": "^5.0.0"
   },
   "dependencies": {
     "jquery": "^3.7.1"
